--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+a{
+    text-decoration: none;
+    color: var(--color-white);
+}
+
 .nav-container{
     height: 70vh;
     background-image: url(../assets/img/portada3.jpg);
@@ -88,9 +93,19 @@
 }
 
 .card-error{
-    background-color: #ff0000;
-    grid-column: 2;
+    background-color: var(--color-error);
+    height: 200px;
+    padding: 50px;
     text-align: center;
+    border-radius: 20px;
+}
+
+.card-success{
+    background-color: var(--color-green);
+    height: 200px;
+    padding: 50px;
+    text-align: center;
+    border-radius: 20px;
 }
 
 .card {
@@ -100,7 +115,9 @@
     overflow: hidden;
     height: 350px;
     width: 350px;
-    border-radius: 20px;
+    /* border-radius: 20px; */
+    border-top-left-radius: 20px ;
+    border-top-right-radius: 20px;
     box-shadow: black 1px 2px 2px ;
     transition: ease 0.5s;
     background-color: var(--color-white-darker);
@@ -155,7 +172,7 @@
 }
 
 footer {
-    background-color: grey;
+    background-color: var(--color-main-dark);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -164,6 +181,7 @@ footer {
     overflow: hidden;
     justify-content: space-between;
     padding-bottom: 20px;
+    color: var(--color-white-darker);
 }
 
 .listRedes {
@@ -175,55 +193,41 @@ footer {
     font-size: 30px;
     list-style: none;
     text-decoration: none;
-    color: #141414;
 }
 
 /* carrito */
 
-/* .section-cart{
-    background-color: salmon;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.portada-cart{
+    background-image: url(../assets/img/portada3.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 70vh;
+}
+
+.section-cart{
+    background-color: var(--color-white);
+    height: 800px;
+}
+
+.cart-container-container{
+    height: 300px;
 }
 
 .cart-container{
-    width: 40%;
-    height: 400px;
-    text-align: center;
-
-}
-
-.thead tr{
-    border: #141414 solid 1px;
-}
-
-.table-cart{
-    border: #141414 solid 1px;
-    width: 100%;
-    margin-top: 60px;
-    padding: 20px;
-}
-
-.volver-index{
-    height: 50px;
-} */
-
-.cart-container{
-    background-color: salmon;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 30px;
+    min-height: 300px;
 }
 
 .card-carrito{
     display: flex;
     justify-content: space-between;
     gap: 50px;
-    background-color: bisque;
+    background-color: var(--color-orange);
     border-radius: 10px;
     width: 70%;
 }
@@ -255,6 +259,20 @@ footer {
     font-size: 25px;
 }
 
+.cart-title{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 30px;
+}
+
+.botones-cart{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    margin-top: 20px;
+}
 
 /* Media queries */
 
