--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,6 @@ a{
 }
 
 .button-add{
-    background-color: var();
     font-size: 20px;
     text-align: center;
     padding: 5px;
@@ -215,17 +214,21 @@ footer {
 }
 
 .cart-container-container{
-    height: 300px;
+    height: 500px;
 }
 
 .cart-container{
-    overflow-y: scroll;
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 30px;
     min-height: 300px;
+    width: 70%;
+    border:#001011 2px solid;
+    border-radius: 10px;
+    margin: auto;
 }
 
 .card-carrito{
@@ -234,7 +237,7 @@ footer {
     gap: 50px;
     background-color: var(--color-orange);
     border-radius: 10px;
-    width: 70%;
+    width: 100%;
 }
 
 .img-card-carrito{
@@ -282,7 +285,7 @@ footer {
     display: flex;
     text-align: center;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 /* Media queries */
