--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 10px;
     width: 70%;
     /* border:#001011 2px solid;
     border-radius: 10px; */
@@ -241,11 +241,13 @@ footer {
     background-color: var(--color-orange);
     border-radius: 10px;
     width: 100%;
+    height: 90px;
+    overflow: hidden;
 }
 
 .img-card-carrito{
-    height: 120px;
-    width: 200px;
+    height: 100%;
+    width: 120px;
     overflow: hidden;
 }
 
