--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,111 @@ a{
     background-color: var(--color-white);
 }
 
+.filtrosContainer-Container{
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
+    display: flex;
+    /* background-color: #E78823; */
+}
+
+.filtrosContainer{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--color-orange);
+    border-radius: 20px;
+    gap: 30px;
+}
+
+.input-filtro{
+    width: 40%;
+    height: 40%;
+    display: flex;
+    padding-left: 20px;
+    margin-left: 10px;
+    gap: 20px;
+    font-size: 20px;
+    text-align: center;
+    align-items: center;
+    border: var(--color-main-dark) 1px solid;
+    background-color: var(--color-white);
+    border-radius: 10px;
+}
+
+
+.input-filtro input{
+    background-color: var(--color-white);
+    border: none;
+    outline: none;
+}
+
+.buscador-filtro{
+    width: 80%;
+    height: 25px;
+}
+
+.rango-precio-container{
+    height: 70px;
+    width: 310px;
+    /* background-color: #21C063; */
+    display: flex;
+}
+
+.range-wraper{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.field{
+    display: flex;
+    gap: 10px;
+    height: 40px;
+    align-items: center;
+}
+
+.field input{
+    width: 70%;
+    border-radius: 5px;
+    height: 30px;
+    outline: none;
+    border: none;
+}
+
+.slider{
+    display: flex;
+    justify-content: center;
+}
+
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
+
+input[type="number"]{
+    text-align: center;
+}
+
+.submit-filtro{
+    height: 40px;
+    width: 70px;
+    border-radius: 10px;
+}
+
 .autos-container {
     width: 70%;
     margin: auto;
+    margin-top: 10px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-around;
     row-gap: 100px;
     padding: 100px;
+    padding-top: 50px;
     background-color: var(--color-white);
 }
 
