--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ button{
     overflow: hidden;
 }
 
+.toast-index{
+    z-index: 99999999999999;
+}
+
 div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
     background-color: var(--color-orange)!important;
 }
@@ -42,10 +46,22 @@ a{
 
 .portada-container{
     height: 70vh;
+    background-color: var(--color-white);
+
+}
+
+.portada {
+    height: 100%;
+    width: 100%;
+    margin: auto;
     background-image: url(../assets/img/portada3.jpg);
+    /* background-attachment:fixed; */
     background-position: center;
     background-size: cover;
     overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
 }
 
 .nav-container{
@@ -61,6 +77,7 @@ a{
 
 .nav-scroll{
     background-color: var(--color-main-dark);
+    z-index: 99999;
 }
 
 .nav{
@@ -79,14 +96,6 @@ a{
     gap: 25px;
 }
 
-.portada {
-    width: 100%;
-    height: 60vh;
-
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-}
 
 .titulo {
     grid-column: 4/6;
@@ -112,7 +121,7 @@ a{
 }
 
 .filtrosContainer-Container{
-    width: 80%;
+    width: 70%;
     margin: auto;
     margin-top: 50px;
     display: flex;
@@ -126,23 +135,27 @@ a{
     justify-content: space-around;
     align-items: center;
     background-color: var(--color-orange);
-    border-radius: 20px;
+    border-radius: 10px;
     gap: 30px;
 }
 
+.filtrosBTN{
+    border-radius: 5px;
+    background-color: var(--color-white);
+}
+
 .input-filtro{
-    width: 40%;
+    width: 20%;
     height: 40%;
     display: flex;
     padding-left: 20px;
     margin-left: 10px;
     gap: 20px;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
     align-items: center;
     border: var(--color-main-dark) 1px solid;
     background-color: var(--color-white);
-    border-radius: 10px;
 }
 
 
@@ -155,6 +168,10 @@ a{
 .buscador-filtro{
     width: 80%;
     height: 25px;
+}
+
+#selectorMarcas{
+    height: 40px;
 }
 
 .rango-precio-container{
@@ -179,7 +196,7 @@ a{
 
 .field input{
     width: 70%;
-    border-radius: 5px;
+
     height: 30px;
     outline: none;
     border: none;
@@ -209,7 +226,7 @@ input[type="number"]{
 .submit-filtro{
     height: 40px;
     width: 70px;
-    border-radius: 10px;
+
     cursor: pointer;
     border: none;
 }
@@ -222,7 +239,7 @@ input[type="number"]{
 .limpiar-filtro{
     height: 40px;
     width: 120px;
-    border-radius: 10px;
+
     cursor: pointer;
     border: none;
 }
@@ -242,7 +259,7 @@ input[type="number"]{
     row-gap: 100px;
     padding: 100px;
     padding-top: 50px;
-    background-color: var(--color-white);
+    background-color: var(--color-white-darker);
 }
 
 .card-error{
@@ -285,7 +302,7 @@ input[type="number"]{
     border-top-right-radius: 20px;
     box-shadow: black 1px 2px 2px ;
     transition: ease 0.5s;
-    background-color: var(--color-white-darker);
+    background-color: var(--color-white);
     color: var(--color-main-dark);
 }
 
@@ -350,7 +367,7 @@ footer {
     height: 220px;
     padding-top: 20px;
     overflow: hidden;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-bottom: 20px;
     color: var(--color-white-darker);
 }
@@ -364,6 +381,73 @@ footer {
     font-size: 30px;
     list-style: none;
     text-decoration: none;
+}
+
+/* .copyright{
+    font-size: 1px!important;
+} */
+
+/* contacto */
+
+.contacto-container{
+    height: 1200px;
+    background-color: var(--color-white);
+    display: flex;
+    justify-content: center;
+}
+
+.contacto-background{
+    width: 90%;
+    height: 1000px;
+    background-color: var(--color-white-darker);
+    margin-top: 70px;
+}
+
+.portada-contacto{
+    background-image: url(../assets/img/contactoPortada.jpg);
+    /* background-attachment: fixed; */
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+    color: var(--color-white);
+    display: grid;
+    grid-template-columns: repeat(24, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+}
+
+.portada-contacto h2{
+    grid-column: 3/12;
+    grid-row:5/7;
+    font-size: 45px;
+}
+
+.portada-contacto h3{
+    grid-column: 2/12;
+    grid-row:7/10;
+    font-size: 18px;
+}
+
+.formulario{
+    margin: auto;
+    margin-top: 30px;
+    background-color: var(--color-white);
+    width: 800px;
+    height: 550px;
+    padding: 30px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 30px; */
+}
+
+.enviar-form{
+    background-color: var(--color-orange);
+    color: var(--color-main-dark);
+}
+
+.enviar-form:hover{
+    background-color: var(--color-orange-light);
 }
 
 /* carrito */
@@ -463,6 +547,37 @@ footer {
     height: 40px;
 }
 
+.button-calcular-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#inputCuotas{
+    height: 30px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+#calcular{
+    height: 30px;
+    margin-left: 10px;
+    border-radius: 5px;
+    border: none;
+    padding: 2px;
+}
+
+.cuota-calculada{
+    margin-right: 10px;
+}
+
+.tittle-card-carrito{
+    color: var(--color-white)!important;
+    font-size: 16px;
+}
+
 .botones-cart{
     display: flex;
     text-align: center;
@@ -490,6 +605,16 @@ footer {
 /* Media queries */
 
 @media only screen and (max-width:1650px) {
+
+    .filtrosContainer-Container{
+        width: 90%;
+        margin-bottom: -10px;
+    }
+
+    .filtrosContainer{
+        border-radius: 0px;
+    }
+
     .cart-container-container{
         height: 350px;
     }
